syntax = "proto3";

package app;

// Declare a service for each controller you have
service AuthController {
  // Declare an rpc for each method that is called via gRPC
  rpc SignUp (AuthCredential) returns (Empty);
  rpc SignIn(AuthCredential) returns (LoginResponse);
}

// Declare the types used above
message AuthCredential {
  string username = 1;
  string password = 2;
}
message Empty{

}

message LoginResponse{
  string accessToken = 1;
}